# Azrael-v.1

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  cloudbuild.yaml  cpp  dfx.json  firebase-applet-config.json  firebase-blueprint.json  firebase.json  firestore.rules  fix-vercel.sh  index.html  main.py  metadata.json  package-lock.json  package.json  server.ts  vercel.json  vite.config.ts
.firebase/: hosting.ZGlzdA.cache
api/: index.ts  proxy.ts
public/: direct.html  manifest.json  sw.js
scripts/: tactical-deploy.sh
src/: App.tsx  firebase.ts  index.css  main.tsx
src/azrael_canister/: Cargo.toml  azrael.did
src/azrael_canister/src/: ai_bridge.rs  api.rs  crypto.rs  identity.rs  lib.rs  persona.rs  proxy.rs  recovery.rs  state.rs  storage.rs
src/azrael_canister/src/tactical/: cipher.rs  compartment.rs  killswitch.rs  mod.rs  tee.rs
src/client/: agent-vercel.ts  ai-client.ts  config.ts  crypto.ts  ic-agent.ts  ii-auth.ts
src/client/components/: AzraelCore.tsx  GargoyleSentry.tsx  GatewaySentry.tsx  NodeOrchestrator.tsx  OmegaDriveVault.tsx  OmegaEScion.tsx  SentryNodeOrchestrator.tsx  ShepherdProtocol.tsx  SonicVoidInterface.tsx  SonicWeaver.tsx  SovereignHandshake.tsx  SovereignHunter.tsx  SovereignSynthesis.tsx  SovereignVideoAsset.tsx  TacticalStatus.tsx  VoidMetalStudio.tsx  VoidOneSentry.tsx
src/components/: MatrixRain.tsx
src/lib/: core.ts  firebase-admin.ts  firebase.ts  lyrics.ts  protocol.ts  router.ts
src/server/: ai.ts  icp.ts  kinetic.ts  proxy-server.ts  reaper.ts  safety.ts
src/services/: icService.ts
(+17 files in other folders)
