[package]
name = "azrael_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.12"
ic-cdk-timers = "0.6" # For periodic tasks if needed
ic-stable-structures = "0.6"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
sha2 = "0.10" # For checksums
hex = "0.4"
rand = "0.8"
